fixed env and everything is seeded

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,7 @@
 FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
-DATABASE_URL=postgresql://starter_app_dev@localhost/starter_app
+DATABASE_URL=postgresql://mar22starterguy:password@localhost/mar22starter
 S3_BUCKET=pokecupid-app-academy
 S3_KEY=AKIASQ5GSF5LC2EZ5UH3
 S3_SECRET=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
-
