--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@
 -i https://pypi.org/simple
 alembic==1.6.5
 bidict==0.22.0; python_version >= '3.7'
-boto3==1.24.37
-botocore==1.27.37; python_version >= '3.7'
+boto3==1.24.39
+botocore==1.27.39; python_version >= '3.7'
 click==7.1.2
 dnspython==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+email-validator==1.2.1
 eventlet==0.30.2
 flask-cors==3.0.8
 flask-login==0.5.0
@@ -22,6 +23,7 @@ flask-wtf==0.15.1
 flask==2.0.1
 greenlet==1.1.0
 gunicorn==20.1.0
+idna==3.3; python_version >= '3.5'
 itsdangerous==2.0.1
 jinja2==3.0.1
 jmespath==1.0.1; python_version >= '3.7'
